# mujoco_erricson

./: .gitignore  README.md  main.py  ppo_code_continuous.py  pyproject.toml
GAIL and AIRL/: collect_demo.py  main.ipynb  notes.md  test.py  train_expert.py  train_imitation.py
GAIL and AIRL/Final/: disc.pth
GAIL and AIRL/utils/: AIRL.py  PPO.py  SAC.py  base.py  buffer.py  env.py  helper.py  network.py  trainer.py
Max entropy IRL/: main.ipynb
Max entropy IRL/utils/: gridworld.py  optimizer.py  plot.py  solver.py  trajectory.py
Taxi/: avg_rewards_AC_finite.npy  deep_q_learner.py  irl.ipynb  main.ipynb  rewards_AC_finite.npy  stdev_rewards_AC_finite.npy  trained_DQN_model
Taxi/expert_data/: taxi_expert_actions.npy  taxi_expert_dones.npy  taxi_expert_next_states.npy
Taxi/scratch/: expert.ipynb  works_ig_3000.pth
irl/: config.ini  inference.py  main.ipynb  main.py
irl/agents/: agent.py  ppo.py
irl/discriminators/: base.py  eairl.py
irl/expert_data/: taxi_expert_states.npy
irl/networks/: agent_network.py  base.py  discriminator_network.py
irl/training_irl_discrete/: config.ini  main.ipynb  ppo_runner.py
irl/utils/: utils.py
mountain_car_dqn/: model_mountain_car.pth  mountain_car.py
videos/Ant-v4__ppo_code_continuous__1__1719583778/: rl-video-episode-1.meta.json  rl-video-episode-125.meta.json  rl-video-episode-27.meta.json  rl-video-episode-64.meta.json  rl-video-episode-8.meta.json
wandb/: latest-run
wandb/run-20240628_183713-ikgzx1nc/: run-ikgzx1nc.wandb
wandb/run-20240628_191009-csycx1lx/: run-csycx1lx.wandb
(+254 files in other folders)
