[tool.poetry]
name = "mujoco"
version = "0.1.0"
description = "Train Basic Algorithms on Mujoco"
authors = ["MohanKumar21 <mohanmrm20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
